Package: R.huge
===============

Version: 0.6.0 [2013-09-21]
o CLEANUP: Package no longer utilizes import(), only importFrom():s.
o CLEANUP: Removed fallback attachments of 'R.utils' as these are no
  longer needed with R.oo (>= 1.15.1).
o ROBUSTNESS: Now declaring all S3 methods in NAMESPACE.
o ROBUSTNESS/WORKAROUND: For now, package attaches the 'R.oo' package.
  This is needed due to what appears to be a bug in how R.oo
  finalizes Object:s assuming R.oo is/can be attached.  Until that
  is resolved, we make sure R.oo is attached.


Version: 0.5.1 [2013-08-02]
o Utilizing new startupMessage() of R.oo.


Version: 0.5.0 [2013-08-02]
o CLEANUP: Package no longer attaches/loads R.utils (only imports it).
  However, it will attach ("load") R.utils dynamically, when certain
  methods are called.


Version: 0.4.4 [2013-05-25]
o Minor speedup by replacing rm() calls with NULL assignments.


Version: 0.4.3 [2013-05-22]
o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.


Version: 0.4.2 [2012-10-16]
o ROBUSTNESS/BUG FIX: No longer passing '...' to NextMethod(), cf.
  R-devel thread 'Do *not* pass '...' to NextMethod() - it'll do it
  for you; missing documentation, a bug or just me?' on Oct 16, 2012.


Version: 0.4.1 [2012-06-29]
o Updated package requirements.


Version: 0.4.0 [2012-04-12]
o Updated package requirements.
o CLEANUP: Package no longer call .Internal() functions.  This will
  cause a slowdown, because we now have to deal with overhead in
  functions such as seek(), readBin() and writeBin().
o CLEANUP: Package no longer creates new generic functions for
  as.vector() and as.matrix() such that R CMD check no longer complaints.


Version: 0.3.0 [2011-07-23]
o Added a namespace to the package, which will be more or less
  a requirement in the next major release of R.
o BUG FIX: Recently R devel automatically adds a namespace to
  a package, if missing.  This caused some of the PSCBS examples