@@ -35,6 +35,8 @@ export(.conflicts.OK)
 # in their names.
 exportPattern("^[^\\.]")
 
+export("isOpen") # Re-exported from 'R.utils'
+
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # DECLARATIONS
